# causalfm-survey

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
causal_bench/: __init__.py  data_generators.py  data_loader.py  metrics.py  wrap_causalfm.py  wrap_causalpfn.py  wrap_dopfn.py  wrap_metalearners.py
docs/: QUICK_REFERENCE.md  WRAPPERS_GUIDE.md
notebooks/: 01_interactive_model_demo.ipynb  02_lalonde_benchmark.ipynb
scripts/: build_new_notebooks.py
